<?xml version="1.0" encoding="utf-8"?>

<!--MIT License-->

<!--Copyright (c) 2019 Thales DIS-->

<!--Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated-->
<!--documentation files (the "Software"), to deal in the Software without restriction, including without limitation the-->
<!--rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to-->
<!--permit persons to whom the Software is furnished to do so, subject to the following conditions:-->

<!--The above copyright notice and this permission notice shall be included in all copies or substantial portions of the-->
<!--Software.-->

<!--THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE-->
<!--WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR-->
<!--COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR-->
<!--OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.-->

<!--IMPORTANT: This source code is intended to serve training information purposes only.-->
<!--Please make sure to review our IdCloud documentation, including security guidelines.-->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_gradient_primary"
    android:gravity="center|top"
    android:orientation="vertical">

    <TextView
        android:id="@+id/fragment_second_step_caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimensionMarginNormal"
        android:layout_gravity="center"
        android:gravity="start"
        android:textSize="@dimen/dimensionTextSizeHeader"
        android:textColor="@color/colorTextPrimary"
        android:text="@string/fragment_second_step_caption" />

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <LinearLayout
            android:id="@+id/fragment_second_step_button_id_card"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_margin="@dimen/dimensionMarginBig"
            android:background="@drawable/button_circle_icon"
            android:orientation="vertical"
            android:clickable="true"
            android:focusable="true">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dimensionMarginBig"
                android:src="@drawable/icon_id_card" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|top"
                android:background="@null"
                android:textColor="@color/colorTextPrimary"
                android:text="@string/fragment_second_step_button_id_card"
                android:clickable="false"
                android:focusable="false"/>



        </LinearLayout>

        <LinearLayout
            android:id="@+id/fragment_second_step_button_passport"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_margin="@dimen/dimensionMarginBig"
            android:background="@drawable/button_circle_icon"
            android:orientation="vertical"
            android:clickable="true"
            android:focusable="true">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dimensionMarginBig"
                android:contentDescription="@android:string/untitled"
                android:src="@drawable/icon_passport"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|top"
                android:background="@null"
                android:textColor="@color/colorTextPrimary"
                android:text="@string/fragment_second_step_button_passport"
                android:clickable="false"
                android:focusable="false"/>



        </LinearLayout>
    </LinearLayout>

</LinearLayout>