<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/img_gradient_primary"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|top"
        android:orientation="vertical">

        <!--Caption-->
        <TextView
            android:id="@+id/fragment_kyc_overview_caotuib"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimensionMarginNormal"
            android:layout_gravity="center"
            android:gravity="start"
            android:textSize="@dimen/dimensionTextSizeHeader"
            android:textColor="@color/colorTextPrimary"
            android:text="@string/fragment_kyc_overview_caption" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_margin="@dimen/dimensionMarginSmall"
            android:background="@drawable/background_stroke"
            android:orientation="vertical">
            <!--User photo + extracted photo layout-->
            <LinearLayout
                android:id="@+id/fragment_kyc_overview_layout_selfie"
                android:layout_weight="2"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:orientation="horizontal"
                android:layout_margin="@dimen/dimensionMarginSmall" >
                <ImageView
                    android:id="@+id/fragment_kyc_overview_iv_selfie"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:contentDescription="@android:string/untitled"
                    tools:srcCompat="@tools:sample/avatars"/>
                <ImageView
                    android:id="@+id/fragment_kyc_overview_iv_selfie_extracted"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:adjustViewBounds="true"
                    android:layout_marginStart="@dimen/dimensionMarginSmall"
                    android:contentDescription="@android:string/untitled"
                    android:visibility="gone"
                    tools:srcCompat="@tools:sample/avatars" />

            </LinearLayout>

            <!--Front and back document side photos-->
            <LinearLayout
                android:id="@+id/fragment_kyc_overview_ll_documents"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:gravity="center|top"
                android:layout_marginStart="@dimen/dimensionMarginSmall"
                android:layout_marginEnd="@dimen/dimensionMarginSmall"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/fragment_kyc_overview_iv_doc_front"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/dimensionMarginSmall"
                    android:adjustViewBounds="true"
                    tools:srcCompat="@tools:sample/avatars"
                    android:contentDescription="@android:string/untitled" />

                <ImageView
                    android:id="@+id/fragment_kyc_overview_iv_doc_back"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/dimensionMarginSmall"
                    android:adjustViewBounds="true"
                    tools:srcCompat="@tools:sample/avatars"
                    android:contentDescription="@android:string/untitled" />

            </LinearLayout>
        </LinearLayout>

        <!--Results layout-->
        <LinearLayout
            android:layout_weight="0.1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimensionMarginSmall"
            android:gravity="center"
            android:orientation="vertical">

            <!--Results Icon-->
            <ImageView
                android:id="@+id/fragment_kyc_overview_iv_progress"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:layout_marginBottom="@dimen/dimensionMarginSmall"
                android:contentDescription="@android:string/untitled"
                app:srcCompat="@drawable/waiting" />

            <!--Status Description-->
            <TextView
                android:id="@+id/fragment_kyc_overview_tv_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimensionMarginSmall"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:textSize="16sp"
                android:textColor="@color/colorTextPrimary"
                android:text="@string/fragment_kyc_overview_check_document"
                android:visibility="visible" />

            <!--Results extracted data like name etc...-->
            <LinearLayout
                android:id="@+id/fragment_kyc_overview_layout_user_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/background_stroke_radius"
                android:padding="@dimen/dimensionMarginNormal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/fragment_kyc_overview_tv_user_info_caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/dimensionMarginNormal"
                    android:gravity="start"
                    android:text="@string/placeholder_doc_extraction"
                    android:textColor="@color/colorTextPrimary"
                    android:visibility="visible"/>
                <TextView
                    android:id="@+id/fragment_kyc_overview_tv_user_info_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimensionMarginNormal"
                    android:textColor="@color/colorTextPrimary"
                    android:text="@string/placeholder_doc_extraction"
                    android:gravity="end"
                    android:visibility="visible" />
            </LinearLayout>

        </LinearLayout>

        <!--Submit / close button-->
        <Button
            android:id="@+id/fragment_kyc_overview_button_next"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimensionMarginBig"
            android:text="@string/button_enrollment_verify"
            style="@style/AppTheme.Button" />
    </LinearLayout>

</FrameLayout>
